--- a/css/main.css
+++ b/css/main.css
@@ -69,3 +69,23 @@ body {
   .site-footer {
     padding: 2rem 0;
   }
+
+  .skip-links {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+
+  .skip-links a {
+    position: absolute;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    top: -4rem;
+    padding: 1rem;
+    }
+
+.skip-link:focus {
+    top: 0;
+}
+
